Fix login form wrapping on top-bar
Top bar login form was wrapping, fixed by moving the form wrap element
out of the region. Fixes bug #5.

Combine login form elements into single entity, radius on outer of whole.

Add CSS tweaks for multiple alert boxes (stack, no-top-border).

--- a/wooey/static/css/style.css
+++ b/wooey/static/css/style.css
@@ -281,7 +281,7 @@ label small {
 select {-moz-appearance: none !important;}
 
 
-select, input[type="text"], input[type="password"] {
+select, input[type="text"], input[type="password"], button {
     border-radius: 3px;
 }
 
@@ -312,3 +312,24 @@ span.status-X span.label.status-error    {display: inline-block; }
 
 .download-button.download-true .download-yes-button {display: inline;}
 .download-button.download-false .download-no-button {display: inline;}
+
+.login_username input {
+    border-top-right-radius:0 !important;
+    border-bottom-right-radius:0 !important;
+    border-right-width: 1;
+}
+
+.login_password input {
+    border-radius:0 !important;
+    border-left-width: 0;
+}
+
+.login_submit button {
+    border-top-left-radius:0 !important;
+    border-bottom-left-radius:0 !important;
+}
+
+.message-container .alert-box {
+    margin-bottom: 0;
+    border-top: 0;
+}
